--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "^4.16.4",
     "facebook-chat-api": "^1.6.1",
     "node-fetch": "^2.3.0",
-    "node-wit": "^5.0.0"
+    "node-wit": "^5.0.0",
+    "sqlite3": "4.0.6"
   },
   "devDependencies": {},
   "scripts": {
